[package]
name = "rape-by-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
craftls = "0.0.2"
webpki-roots = "0.26.1"

#env_logger = "0.10"
#log = { version = "0.4.4" }
#mio = { version = "0.8", features = ["net", "os-poll"] }
#pki-types = { package = "rustls-pki-types", version = "1", features = ["std"] }
#rcgen = { version = "0.11.3", features = ["pem"], default-features = false }
#craftls = { path = "../rustls", features = [ "logging" ]}

#hyper = { version = "1", features = ["full"] }
#tokio = { version = "1", features = ["full"] }
#pretty_env_logger = "0.5"
#http-body-util = "0.1"
#bytes = "1"
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
#form_urlencoded = "1"
#http = "1"
#futures-util = { version = "0.3", default-features = false }
#pin-project-lite = "0.2.14"
